# models

jax_mlp/: README.md  pyproject.toml
jax_mlp/notebooks/: mlp.ipynb
jax_mlp/notebooks/.ipynb_checkpoints/: mlp-checkpoint.ipynb
jax_mlp/src/mlp/: __init__.py  dataset.py  model.py  train.py
